# sauna-bobor-status

./: Makefile  README.md  app.py  pyproject.toml
local/: Makefile  dashboard.json  prometheus.yml  victoriametrics-data.volume  victoriametrics.container
parsers/: bobor.py
prom/: metrics.py
sauna/: status.py
typings/huum/: huum.pyi
utils/: scheduler.py
