[tool.poetry]
name = "bobor_status"
version = "0.1.0"
description = ""
authors = ["mtmn <miro@mtmn.name>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
flask = "^3.1.2"
requests = "^2.32.0"
beautifulsoup4 = "^4.14.3"
gunicorn = "^23.0.0"
loguru = "^0.7.3"
asyncio = "^4.0.0"
huum = "^0.8.1"
aiohttp = "^3.13.3"
prometheus-client = "^0.24.1"
flask-limiter = "^3.10.0"
black = "^26.1.0"

[tool.pyright]
stubPath = "typings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
